work/218/Chain_C/compile_stderr_0.txt
source_0.c: In function ‘trapez’:
source_0.c:21:3: error: expected ‘,’ or ‘;’ before ‘int’
   int k;
   ^
source_0.c:27:7: error: ‘k’ undeclared (first use in this function)
   for(k=1; k < n; k++)
       ^
source_0.c:27:7: note: each undeclared identifier is reported only once for each function it appears in
source_0.c:20:10: warning: unused variable ‘x’ [-Wunused-variable]
   double x = 0
          ^
